dist/manifests/kubernetes-cluster-manifests/fluentd-centralized/5fluentd-centralized.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluentd-centralized
  namespace: kube-system
  labels:
    k8s-app: fluentd-centralized
    version: v3.0.0
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: fluentd-centralized
        version: v3.0.0
        kubernetes.io/cluster-service: "true"

      annotations:
        prometheus.io/port: "24231"
        prometheus.io/scrape: "true"
        # This annotation ensures that fluentd does not get evicted if the node
        # supports critical pod annotation based priority scheme.
        # Note that this does not guarantee admission on the nodes (#40573).
        scheduler.alpha.kubernetes.io/critical-pod: ''
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      serviceAccountName: fluentd-centralized
      containers:
      - name: fluentd-centralized
        image: bossjones/fluentd-elasticsearch:v3.0.0
        imagePullPolicy: Always
        # command:

        volumeMounts:
        # fluentd work files; do not share with multiple instances
        - name: work
          mountPath: /work
          readOnly: false
        # log file store (if used)
        - name: log
          mountPath: /log
          readOnly: false
        
        - name: spool
          mountPath: /spool
          readOnly: false
        
        - name: config-volume
          mountPath: /etc/fluent/config.d
        
        - name: grok-patterns
          mountPath: /grok.d
        
        - name: templates-d
          mountPath: /templates.d
        
        - name: buffers-d
          mountPath: /buffers.d
        
        - name: position-d
          mountPath: /position.d
        

        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          # limits:
          #   cpu: "2000m"
          #   memory: "900Mi"
          # requests:
          #   # cpu: "0.05"
          #   cpu: "1000m"
          #   memory: "200Mi"
          

        securityContext:
          # SOURCE: https://docs.okd.io/latest/rest_api/apis-apps/v1beta2.Deployment.html
          privileged: true

        livenessProbe:
          tcpSocket:
            port: 24231
          initialDelaySeconds: 300
          timeoutSeconds: 10

        ports:
        - containerPort: 24231
          name: promths-mtr
          protocol: TCP
        - containerPort: 24220
          name: monitor-agnt
          protocol: TCP

      # sidecar disabled

      volumes:
      - name: work
        emptyDir: {}
      - name: spool
        emptyDir: {}
      # log file store (if used)
      # This is rsyslog-pvc on purpose, we'r trying to mount the pvc that rsyslog-pvc creates
      - name: log
        persistentVolumeClaim:
          claimName: rsyslog-centralized-pvc
      
      - name: config-volume
        configMap:
          name: fluentd-centralized-grokconfig-0-3-0
          # defaultMode: 0775
      
      - name: grok-patterns
        configMap:
          name: fluentd-centralized-grok-patterns-0-3-0
          # defaultMode: 0775
      
      - name: templates-d
        configMap:
          name: fluentd-centralized-elasticseach-template
      
      - name: buffers-d
        hostPath:
          # directory location on host
          path: /buffers.d
          type: DirectoryOrCreate
      
      - name: position-d
        hostPath:
          # directory location on host
          path: /position.d
          type: DirectoryOrCreate
      

      hostNetwork: True

      hostPID: True

      nodeSelector:
        beta.kubernetes.io/os: linux
        kubernetes.io/hostname: "k8s-head"
